// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryShot Testing - Full Render Storyshots typography/Details.stories.tsx Details | Compact 1`] = `
<div
  className="Details__BBDetailsContainer-sc-1r0av7h-2 gNaVrc"
>
  <h2
    className="Details__BBDetailsProperty-sc-1r0av7h-0 cgRzEa"
  >
    Property
  </h2>
  <h2
    className="Details__BBDetailsValue-sc-1r0av7h-1 cAePeK"
  >
    Value
  </h2>
</div>
`;

exports[`StoryShot Testing - Full Render Storyshots typography/Details.stories.tsx Details | Large 1`] = `
<div
  className="Details__BBDetailsContainer-sc-1r0av7h-2 gNaVrc"
>
  <h2
    className="Details__BBDetailsProperty-sc-1r0av7h-0 bdrLAU"
  >
    Property
  </h2>
  <h2
    className="Details__BBDetailsValue-sc-1r0av7h-1 ctsDEC"
  >
    Value
  </h2>
</div>
`;

exports[`StoryShot Testing - Full Render Storyshots typography/Details.stories.tsx Details 1`] = `
<div
  className="Details__BBDetailsContainer-sc-1r0av7h-2 gNaVrc"
>
  <h2
    className="Details__BBDetailsProperty-sc-1r0av7h-0 fAklyb"
  >
    Property
  </h2>
  <h2
    className="Details__BBDetailsValue-sc-1r0av7h-1 blyrIH"
  >
    Value
  </h2>
</div>
`;
